Use component from props in order to pervent classes conflicts on build. Update docs.

--- a/src/styles.less
+++ b/src/styles.less
@@ -780,6 +780,7 @@
       border-bottom: 1px solid #ccc;
     }
     .country {
+      cursor: pointer;
       padding: 7px 10px;
       .dial-code {
         color: #6b6b6b;
